# layra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  shot.mjs
.github/workflows/: deploy.yml  release.yml
corpus/: d00.mmd  d01.mmd  d02.mmd  d03.mmd  d04.mmd  d05.mmd  d06.mmd  d07.mmd  d08.mmd  d09.mmd  d10.mmd  d11.mmd  d12.mmd  d13.mmd  d14.mmd  d15.mmd  d16.mmd  d17.mmd  d18.mmd  d19.mmd  d20.mmd  d21.mmd  d22.mmd  d23.mmd  d24.mmd
crates/layra-cli/: Cargo.toml
crates/layra-cli/src/: main.rs  mcp.rs  watch.rs
crates/layra-core/: Cargo.toml
crates/layra-core/src/: charts.rs  geometry.rs  graph.rs  lib.rs  sequence.rs  style.rs
crates/layra-icons/: Cargo.toml
crates/layra-icons/assets/: infra.json
crates/layra-icons/src/: lib.rs
crates/layra-layout/: Cargo.toml
crates/layra-layout/src/: bk.rs  components.rs  crossing.rs  layering.rs  lib.rs  position.rs
crates/layra-layout/tests/: cluster_contiguity.rs  cluster_overlap.rs  large_graph.rs  lr_overlap.rs  nested_clusters.rs
crates/layra-parser/: Cargo.toml
crates/layra-parser/src/: class.rs  er.rs  gantt.rs  git.rs  lib.rs  linear.rs  mindmap.rs  pie.rs  sequence.rs  state.rs
crates/layra-render-svg/: Cargo.toml
crates/layra-render-svg/src/: fmt.rs  gantt.rs  lib.rs  linear.rs  pie.rs  sequence.rs  shapes.rs  theme.rs
crates/layra-router/: Cargo.toml
crates/layra-router/src/: grid.rs  lib.rs  orthogonal.rs
crates/layra-router/tests/: port_attachment.rs
crates/layra-text/: Cargo.toml
crates/layra-text/src/: lib.rs
crates/layra-text/tests/: measure_fits.rs
crates/layra-wasm/: Cargo.toml
crates/layra-wasm/examples/: bench.rs  blogcheck.rs  demo.rs
crates/layra-wasm/src/: lib.rs
crates/layra-wasm/tests/: blog_compat.rs  corpus.rs  edge_styles.rs  expanded_icons.rs  infra_icons.rs  label_fits_box.rs  label_overlap.rs  nested_clusters.rs  new_types.rs  no_edge_through_node.rs  orthogonal_routing.rs
docs/: AGENTS.md
playground/: README.md  build.sh
playground/public/: app.js  icons-blog.json  index.html  infra-icons.json  layra-types.ts  style.css
playground/tests/: drag.spec.mjs
scripts/: check-versions.sh  mcp_stdio_test.py
