[package]
name = "layra-icons"
description = "Icon registry: Iconify-format packs, ID namespacing, inline SVG emission"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
