[package]
name = "layra-parser"
description = "Mermaid-compatible flowchart parser producing the Layra IR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
layra-core = { workspace = true }
thiserror = { workspace = true }
