[package]
name = "layra-render-svg"
description = "SVG renderer with the Layra editorial theme (role taxonomy, shape library)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
layra-core = { workspace = true }
layra-icons = { workspace = true }
layra-text = { workspace = true }

[dev-dependencies]
# Integration tests build IR straight from Mermaid source; the parser only
# depends on layra-core, so this dev-dep stays acyclic.
layra-parser = { workspace = true }
