[package]
name = "layra-render-svg"
description = "SVG renderer with the Layra editorial theme (role taxonomy, shape library)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
layra-core = { workspace = true }
layra-icons = { workspace = true }
layra-text = { workspace = true }

[dev-dependencies]
# Integration tests build IR straight from Mermaid source and run it through
# the real measure/layout/route pipeline. These crates depend only on
# layra-core (and layra-text), so the dev-deps stay acyclic.
layra-parser = { workspace = true }
layra-layout = { workspace = true }
layra-router = { workspace = true }
