[package]
name = "layra-router"
description = "Edge routing: border clipping, waypoint smoothing, label placement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
layra-core = { workspace = true }

[dev-dependencies]
layra-layout = { workspace = true }
