[package]
name = "layra-wasm"
description = "WASM bindings: source text in, SVG out"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
layra-core = { workspace = true }
layra-icons = { workspace = true }
layra-parser = { workspace = true }
layra-text = { workspace = true }
layra-layout = { workspace = true }
layra-router = { workspace = true }
layra-render-svg = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
